--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,11 +9,15 @@
     android:orientation="vertical">
 
 
-    <ImageView
-        android:id="@+id/fish_img"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <com.example.myapplication.FishRelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         />
+<!--    <ImageView-->
+<!--        android:id="@+id/fish_img"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        />-->
 
 
 </LinearLayout>
